--- a/style.css
+++ b/style.css
@@ -549,6 +549,17 @@ footer{
     z-index: 1000;
 }
 
+.top-right-username {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-weight: bold;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007BFF;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
 
 
 
