--- a/style.css
+++ b/style.css
@@ -538,6 +538,29 @@ footer{
     background-color: #c82333;
 }
 
+.success-popup {
+    background-color: #28a745;
+    color: white;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #28a745;
+    z-index: 1000;
+}
+
+.error-popup {
+    background-color: #dc3545; /* Red color for errors */
+    color: white;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #dc3545;
+    z-index: 1000;
+}
 
 
 
